crates/toml_edit/tests/fixtures/invalid/datetime-malformed-with-milli.stderr
TOML parse error at line 1, column 23
  |
1 | with-milli = 1987-07-5T17:45:00.12Z
  |                       ^
expected 1 more elements
While parsing a Date-Time
